fix in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes@4.18.1"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
