--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,9 @@ main:
   - title: "Program"
     url: /#workshop-program
   - title: "Call for papers"
-    url: /#call-for-papers
-  - title: "Challenge"
-    url: /#vipriors-challenge
+    url: /call-for-papers
+  - title: "Challenges"
+    url: /challenges
   - title: "Invited speakers"
     url: /#
   - title: "Organizers"
