small homepage changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
-  - title: "Introduction"
-    url: /#visual-inductive-priors-for-data-efficient-deep-learning
+  - title: "About"
+    url: /#about-the-workshop
   - title: "Program"
     url: /#workshop-program
   - title: "Call for papers"
