Fix navigation: add links to homepage subheaders.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,6 @@ main:
   - title: "Challenges"
     url: /challenges
   - title: "Invited speakers"
-    url: /#
+    url: /#invited-speakers
   - title: "Organizers"
-    url: /#
+    url: /#organizers
