--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: VIPriors Workshop - ECCV 2020
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  1st Visual Inductive Priors for Data-Efficient Deep Learning Workshop. Saving data by adding visual knowledge priors to Deep Learning.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
