Final update of the 2020 website, so that it can remain permanently serving an archival function.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,13 +3,9 @@ main:
     url: /#watch-the-recording
   - title: "About"
     url: /#about-the-workshop
-  - title: "Papers"
+  - title: "Accepted works"
     url: /#workshop-program
-  - title: "Author instructions"
+  - title: "Call for papers"
     url: /call-for-papers
   - title: "Challenges"
     url: /challenges
-  - title: "Speakers"
-    url: /#invited-speakers
-  - title: "Organizers"
-    url: /#organizers
