--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,3 +11,6 @@ main:
   #   url: /#invited-speakers
   - title: "Organizers"
     url: /#organizers
+  - title: "Editions"
+    - title: "2020"
+      url: /2020
