--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,5 @@ main:
   #   url: /#invited-speakers
   - title: "Organizers"
     url: /#organizers
-  - title: "Editions"
-    - title: "2020"
-      url: /2020
+  - title: "2020 Edition"
+    url: /2020
