Remove program from menu, as we do not have one yet.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "About"
     url: /#about-the-workshop
-  - title: "Program"
-    url: /#workshop-program
+  # - title: "Program"
+  #   url: /#workshop-program
   - title: "Call for papers"
     url: /#call-for-papers
   - title: "Challenges"
