--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,17 @@
 main:
+  - title: "Watch"
+    url: /#watch
   - title: "About"
     url: /#about-the-workshop
+  - title: "Accepted Works"
+    url: /call-for-papers
   # - title: "Program"
   #   url: /#workshop-program
-  - title: "Call for papers"
-    url: /call-for-papers
+  # - title: "Call for papers"
+  #   url: /call-for-papers
   - title: "Challenges"
     url: /challenges
   # - title: "Invited speakers"
   #   url: /#invited-speakers
-  - title: "Organizers"
-    url: /#organizers
   - title: "2020 Edition"
     url: /2020
