Fix Watch link.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 main:
   - title: "Watch"
-    url: /#watch
+    url: /#watch-the-recording
   - title: "About"
     url: /#about-the-workshop
   - title: "Accepted Works"
