Update menu item.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #   url: /#invited-speakers
   - title: "Organizers"
     url: /#organizers
-  - title: "Papers"
+  - title: "Call for papers"
     url: /call-for-papers
   # - title: "Program"
   #   url: /#workshop-program
